--- a/LAb_4/lab4.ipynb
+++ b/LAb_4/lab4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
    "id": "5f6954a5",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,7 @@
     "from keras.utils.np_utils import to_categorical\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras import layers\n",
     "from keras.layers import Embedding, Dropout, LSTM\n",
     "from keras_preprocessing.sequence import pad_sequences\n",
     "from keras.preprocessing.text import Tokenizer\n",
@@ -265,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f8e7dede",
+   "id": "afb58dd5",
    "metadata": {
     "scrolled": false
    },
@@ -508,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "77151d7d",
+   "id": "4f343bc2",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0990a572",
+   "id": "14ccbb7c",
    "metadata": {},
    "source": [
     "# Task2"
@@ -542,63 +543,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "37ae4eed",
+   "execution_count": 130,
+   "id": "8adff8fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow import keras\n",
-    "\n",
-    "(train_features, train_labels), (test_features, test_labels) = keras.datasets.fashion_mnist.load_data()"
+    "from tensorflow import keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "5ef337f9",
+   "execution_count": 135,
+   "id": "44d0c610",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60000, 28, 28)\n",
-      "(10000, 28, 28)\n"
+      "60000 train samples\n",
+      "10000 test samples\n",
+      "image shape (28, 28)\n"
      ]
     }
    ],
    "source": [
-    "print(train_features.shape)\n",
-    "print(test_features.shape)"
+    "num_classes = 10\n",
+    "\n",
+    "(x_train, y_train), (x_test, y_test) = keras.datasets.fashion_mnist.load_data()\n",
+    "print(x_train.shape[0], 'train samples')\n",
+    "print(x_test.shape[0], 'test samples')\n",
+    "print('image shape', x_train[0].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "361b55e8",
+   "execution_count": 136,
+   "id": "41f64187",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input shape:  784\n"
+     ]
+    }
+   ],
    "source": [
-    "# Normalize pixel values to be between 0 and 1\n",
-    "train_features = train_features.astype('float32') / 255\n",
-    "test_features = test_features.astype('float32') / 255"
+    "input_dim = 28 * 28 #784\n",
+    "\n",
+    "x_train = x_train.reshape(60000, input_dim)\n",
+    "x_test = x_test.reshape(10000, input_dim)\n",
+    "print('input shape: ', x_train.shape[1])\n",
+    "\n",
+    "x_train = x_train.astype('float32')\n",
+    "x_test = x_test.astype('float32')\n",
+    "x_train /= 255\n",
+    "x_test /= 255\n",
+    "\n",
+    "# convert class vectors to binary class matrices\n",
+    "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
+    "y_test = keras.utils.to_categorical(y_test, num_classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "e0261a6b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_labels = keras.utils.to_categorical(train_labels)\n",
-    "test_labels = keras.utils.to_categorical(test_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "efbf0fa0",
+   "execution_count": 127,
+   "id": "c54b5bff",
    "metadata": {},
    "outputs": [
     {
@@ -629,40 +641,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "3ec3c68e",
+   "execution_count": 137,
+   "id": "c7a18e0b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'layers' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1848/2613258478.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSequential\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m512\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relu'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m784\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m512\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relu'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'softmax'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'layers' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_23\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_33 (Dense)            (None, 512)               401920    \n",
+      "                                                                 \n",
+      " dense_34 (Dense)            (None, 512)               262656    \n",
+      "                                                                 \n",
+      " dense_35 (Dense)            (None, 10)                5130      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 669,706\n",
+      "Trainable params: 669,706\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "from keras.layers import Conv2D, MaxPooling2D, Flatten, Dropout\n",
-    "from keras.layers.advanced_activations import LeakyReLU\n",
-    "\n",
     "model =  keras.Sequential()\n",
     "model.add(layers.Dense(512, activation='relu', input_shape=(784,)))\n",
     "model.add(layers.Dense(512, activation='relu'))\n",
     "model.add(layers.Dense(10, activation='softmax'))\n",
     "\n",
-    "model.summary()\n",
-    "model.compile(loss='categorical_crossentropy',   optimizer='adam', metrics=['accuracy'])\n",
-    "\n"
+    "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "1970c7b9",
+   "execution_count": 138,
+   "id": "994c4bab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,55 +690,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "8409b5bc",
+   "execution_count": 139,
+   "id": "c3420039",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Failed to convert a NumPy array to a Tensor (Unsupported object type list).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1848/412857613.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m64\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\keras\\utils\\traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     65\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# pylint: disable=broad-except\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 67\u001b[1;33m       \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     68\u001b[0m     \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m       \u001b[1;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\tensorflow\\python\\framework\\constant_op.py\u001b[0m in \u001b[0;36mconvert_to_eager_tensor\u001b[1;34m(value, ctx, dtype)\u001b[0m\n\u001b[0;32m    104\u001b[0m       \u001b[0mdtype\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdtypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_dtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_datatype_enum\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    105\u001b[0m   \u001b[0mctx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mensure_initialized\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 106\u001b[1;33m   \u001b[1;32mreturn\u001b[0m \u001b[0mops\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEagerTensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mctx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdevice_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    107\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    108\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Failed to convert a NumPy array to a Tensor (Unsupported object type list)."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "750/750 - 11s - loss: 0.0900 - accuracy: 0.8195 - val_loss: 0.0755 - val_accuracy: 0.8438 - 11s/epoch - 15ms/step\n",
+      "Epoch 2/10\n",
+      "750/750 - 8s - loss: 0.0650 - accuracy: 0.8671 - val_loss: 0.0632 - val_accuracy: 0.8700 - 8s/epoch - 11ms/step\n",
+      "Epoch 3/10\n",
+      "750/750 - 9s - loss: 0.0580 - accuracy: 0.8811 - val_loss: 0.0602 - val_accuracy: 0.8728 - 9s/epoch - 12ms/step\n",
+      "Epoch 4/10\n",
+      "750/750 - 9s - loss: 0.0542 - accuracy: 0.8884 - val_loss: 0.0619 - val_accuracy: 0.8751 - 9s/epoch - 12ms/step\n",
+      "Epoch 5/10\n",
+      "750/750 - 9s - loss: 0.0510 - accuracy: 0.8956 - val_loss: 0.0571 - val_accuracy: 0.8877 - 9s/epoch - 12ms/step\n",
+      "Epoch 6/10\n",
+      "750/750 - 9s - loss: 0.0481 - accuracy: 0.9018 - val_loss: 0.0572 - val_accuracy: 0.8829 - 9s/epoch - 12ms/step\n",
+      "Epoch 7/10\n",
+      "750/750 - 9s - loss: 0.0458 - accuracy: 0.9060 - val_loss: 0.0563 - val_accuracy: 0.8876 - 9s/epoch - 12ms/step\n",
+      "Epoch 8/10\n",
+      "750/750 - 9s - loss: 0.0435 - accuracy: 0.9110 - val_loss: 0.0615 - val_accuracy: 0.8812 - 9s/epoch - 12ms/step\n",
+      "Epoch 9/10\n",
+      "750/750 - 9s - loss: 0.0416 - accuracy: 0.9151 - val_loss: 0.0577 - val_accuracy: 0.8918 - 9s/epoch - 12ms/step\n",
+      "Epoch 10/10\n",
+      "750/750 - 9s - loss: 0.0399 - accuracy: 0.9202 - val_loss: 0.0561 - val_accuracy: 0.8882 - 9s/epoch - 12ms/step\n"
      ]
     }
    ],
    "source": [
-    "model.fit(train_features, train_labels, validation_data=(test_features, test_labels), batch_size=64, epochs=20)"
+    "history = model.fit(x_train,\n",
+    "                    y_train,\n",
+    "                    epochs=10,\n",
+    "                    batch_size=64,                                   \n",
+    "                    validation_split=0.2,\n",
+    "                    verbose = 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b33aad2",
+   "execution_count": 140,
+   "id": "83e47c64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_23\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_33 (Dense)            (None, 512)               401920    \n",
+      "                                                                 \n",
+      " dense_34 (Dense)            (None, 512)               262656    \n",
+      "                                                                 \n",
+      " dense_35 (Dense)            (None, 10)                5130      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 669,706\n",
+      "Trainable params: 669,706\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b9ddfcf9",
+   "execution_count": 142,
+   "id": "8055379a",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores = model.evaluate(test_features, test_labels, verbose=0)\n",
-    "print(f'Accuracy: {scores[1]}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bf01cfe",
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.08454565703868866\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'Loss: {scores[0]}')"
    ]
